log
Wed 03 May 2023 02:26:03 PM UTC: 
 tests:  0|5
total_score: 0/70
7d932af
Wed 03 May 2023 03:00:47 PM UTC: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:54:9: error: unused variable ‘numero’ [-Werror=unused-variable]
   54 |     int numero = 1;
      |         ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
ae89136
Wed 03 May 2023 03:00:54 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
87195a9
Wed 03 May 2023 03:09:23 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
9f6e084
Fri 05 May 2023 06:29:47 PM UTC: 
 sudoku.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:51:33: error: variable ‘vmatriz’ set but not used [-Werror=unused-but-set-variable]
   51 |   int vfilas[10], vcolumnas[10],vmatriz[10];
      |                                 ^~~~~~~
sudoku.c:51:19: error: variable ‘vcolumnas’ set but not used [-Werror=unused-but-set-variable]
   51 |   int vfilas[10], vcolumnas[10],vmatriz[10];
      |                   ^~~~~~~~~
sudoku.c:51:7: error: variable ‘vfilas’ set but not used [-Werror=unused-but-set-variable]
   51 |   int vfilas[10], vcolumnas[10],vmatriz[10];
      |       ^~~~~~
sudoku.c:50:12: error: unused variable ‘columa’ [-Werror=unused-variable]
   50 |   int fila,columa = 0;
      |            ^~~~~~
sudoku.c:50:7: error: unused variable ‘fila’ [-Werror=unused-variable]
   50 |   int fila,columa = 0;
      |       ^~~~
sudoku.c:48:8: error: unused variable ‘array’ [-Werror=unused-variable]
   48 |   int *array = (int*)calloc(sizeof(int),10);
      |        ^~~~~
cc1: all warnings being treated as errors
Compilation failed
9564846
Fri 05 May 2023 06:38:32 PM UTC: 
 sudoku.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:62:36: error: expected ‘]’ before ‘)’ token
   62 |       if (vfilas[n->sudo[i][j] == 1)
      |                                    ^
      |                                    ]
sudoku.c:49:33: error: variable ‘vmatriz’ set but not used [-Werror=unused-but-set-variable]
   49 |   int vfilas[10], vcolumnas[10],vmatriz[10];
      |                                 ^~~~~~~
sudoku.c:49:19: error: variable ‘vcolumnas’ set but not used [-Werror=unused-but-set-variable]
   49 |   int vfilas[10], vcolumnas[10],vmatriz[10];
      |                   ^~~~~~~~~
sudoku.c:48:12: error: unused variable ‘columa’ [-Werror=unused-variable]
   48 |   int fila,columa = 0;
      |            ^~~~~~
sudoku.c:48:7: error: unused variable ‘fila’ [-Werror=unused-variable]
   48 |   int fila,columa = 0;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
14bef82
Fri 05 May 2023 06:43:31 PM UTC: 
 sudoku.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:70:32: error: expected ‘)’ before ‘]’ token
   70 |     if(vcolumnas[n->sudo[j][i]]] == 1)
      |       ~                        ^
      |                                )
sudoku.c:70:32: error: expected statement before ‘]’ token
sudoku.c:70:5: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   70 |     if(vcolumnas[n->sudo[j][i]]] == 1)
      |     ^~
sudoku.c:70:34: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   70 |     if(vcolumnas[n->sudo[j][i]]] == 1)
      |                                  ^~
sudoku.c:70:34: error: expected expression before ‘==’ token
sudoku.c:70:38: error: expected statement before ‘)’ token
   70 |     if(vcolumnas[n->sudo[j][i]]] == 1)
      |                                      ^
sudoku.c:75:5: error: ‘else’ without a previous ‘if’
   75 |     else{
      |     ^~~~
sudoku.c:76:16: error: statement with no effect [-Werror=unused-value]
   76 |       vcolumnas[n->sudo[i][j]]] = 1;
      |       ~~~~~~~~~^~~~~~~~~~~~~~~
sudoku.c:76:31: error: expected ‘;’ before ‘]’ token
   76 |       vcolumnas[n->sudo[i][j]]] = 1;
      |                               ^
      |                               ;
sudoku.c:76:31: error: expected statement before ‘]’ token
sudoku.c:76:33: error: expected expression before ‘=’ token
   76 |       vcolumnas[n->sudo[i][j]]] = 1;
      |                                 ^
sudoku.c:49:33: error: variable ‘vmatriz’ set but not used [-Werror=unused-but-set-variable]
   49 |   int vfilas[10], vcolumnas[10],vmatriz[10];
      |                                 ^~~~~~~
sudoku.c:48:12: error: unused variable ‘columa’ [-Werror=unused-variable]
   48 |   int fila,columa = 0;
      |            ^~~~~~
sudoku.c:48:7: error: unused variable ‘fila’ [-Werror=unused-variable]
   48 |   int fila,columa = 0;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
2437df5
